# aoc-2021-c

./: README.md
day_01/: d01_first_part.c  d01_second_part.c  first_part.c  second_part.c
day_02/: d02_first_part.c  first_part.c  second_part.c
day_03/: CMakeLists.txt  d03_first_part.c  d03_second_part.c  first_part.c  second_part.c
happy-C-mas/day_01/: first_part.c  second_part.c
happy-C-mas/day_02/: second_part.c
happy-C-mas/day_03/: second_part.c
happy-C-mas/day_04/: CMakeLists.txt  first_part.c  main.c
happy-C-mas/day_05/: aoc.h
